--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ supabase/
 # Temporary files
 *.tmp
 *.temp
+
+20251020 - Client Workflow Proposition - Chatbot.pdf
+Stories We Tell. - Questionaire for LLM - Working draft.docx
+test_rag_complete.py
+client_document.txt
+sample_knowledge.txt
