--- a/.vercelignore
+++ b/.vercelignore
@@ -1,4 +1,4 @@
-# Exclude large files that cause deployment size issues
+# Exclude ALL large files
 *.pdf
 *.docx
 *.mp4
@@ -6,14 +6,20 @@
 *.avi
 *.zip
 *.tar.gz
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.svg
 
-# Exclude test and development files
+# Exclude ALL test and development files
 test_*
 train_*
 client_document.txt
 sample_knowledge.txt
 DEPLOYMENT_CHECKLIST.md
 README.md
+*.md
 
 # Exclude development files
 .env.local
@@ -26,6 +32,7 @@ README.md
 **/*.spec.*
 __tests__/
 test/
+test_documents/
 
 # Exclude documentation
 docs/
@@ -40,9 +47,5 @@ docs/
 .DS_Store
 Thumbs.db
 
-# Keep these essential files:
-# - requirements.txt
-# - vercel.json
-# - api/
-# - app/
-# - supabase/
+# Exclude Supabase config (not needed for deployment)
+supabase/
